lein, profiles.clj: only add OpenJ9 JVM opts when running that VM.